@@ -547,8 +547,8 @@ typedef struct rcoption {
 #define NANO_DELETE_KEY			NANO_CONTROL_D
 #define NANO_BACKSPACE_KEY		NANO_CONTROL_H
 #define NANO_TAB_KEY			NANO_CONTROL_I
-#define NANO_INDENTMARKED_KEY		NANO_ALT_RCURLYBRACKET
-#define NANO_UNINDENTMARKED_KEY		NANO_ALT_LCURLYBRACKET
+#define NANO_INDENT_KEY			NANO_ALT_RCURLYBRACKET
+#define NANO_UNINDENT_KEY		NANO_ALT_LCURLYBRACKET
 #define NANO_SUSPEND_KEY		NANO_CONTROL_Z
 #define NANO_ENTER_KEY			NANO_CONTROL_M
 #define NANO_TOFILES_KEY		NANO_CONTROL_T
